<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@drawable/toolbar_border"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_toolbar_search"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/blue_normal"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_search"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:background="@drawable/input_background_gray"
                        android:drawableStart="@drawable/search_24px"
                        android:drawablePadding="5dp"
                        android:hint="@string/hint_search_home"
                        android:paddingStart="10dp"
                        android:textColorHint="@color/color_gray_border"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <!-- Spinner izquierdo -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_category"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        app:boxStrokeColor="@color/color_gray_border"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <AutoCompleteTextView
                            android:id="@+id/spinner_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_background_gray"
                            android:textSize="12sp"
                            android:inputType="none"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Spinner derecho -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_filtro"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        app:boxStrokeColor="@color/color_gray_border"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <AutoCompleteTextView
                            android:id="@+id/spinner_filter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_background_gray"
                            android:textSize="12sp"
                            android:inputType="none"
                            android:textColor="@color/black"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- En esta seccion se mostraran las card con las publicaciones               -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>

